@@ -21,7 +21,7 @@ string (REPLACE ";" " " CFLAGS "${CFLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CFLAGS}")
 
-set(LIBS ${UAPSC_DEPS_LIBRARIES})
+set(LIBS ${UAPSC_DEPS_LIBRARIES} -lm)
 
 set(LIB_PATHS ${UAPSC_DEPS_LIBRARY_DIRS})
 link_directories(${LIB_PATHS})
